--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "4.0.0",
     "chart.js": "2.7.1",
     "date-now": "^1.0.1",
+    "firebase": "^7.20.0",
     "flag-icon-css": "2.9.0",
     "font-awesome": "4.7.0",
     "history": "4.7.2",
