--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
     "react": "16.2.0",
     "react-chartjs-2": "2.7.0",
     "react-dom": "16.2.0",
-    "react-moment": "^0.7.0",
+    "react-moment": "^0.7.9",
     "react-router-dom": "4.2.2",
     "react-transition-group": "2.2.1",
     "reactstrap": "5.0.0-beta",
+    "regenerator-runtime": "^0.13.7",
     "simple-line-icons": "2.4.1"
   },
   "scripts": {
