--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "bootstrap": "4.0.0",
     "chart.js": "2.7.1",
+    "classnames": "^2.2.6",
     "date-now": "^1.0.1",
     "firebase": "^7.20.0",
     "flag-icon-css": "2.9.0",
