--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-transition-group": "2.2.1",
     "reactstrap": "5.0.0-beta",
     "regenerator-runtime": "^0.13.7",
-    "simple-line-icons": "2.4.1"
+    "simple-line-icons": "2.4.1",
+    "xml2js": "^0.4.23"
   },
   "scripts": {
     "dev": "webpack -d --progress --watch --profile --json > compilation-stats.json --env.dev",
